--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-    "name": "𝕏𝕣𝕒𝕪-𝕍𝟚𝕣𝕒𝕪-𝕍𝕝𝕖𝕤𝕤-ℍ𝕖𝕣𝕠𝕜𝕦",
-    "description": "🄳🄴🄿🄻🄾🅈 🅇🅁🄰🅈 🅂🄴🅁🅅🄴🅁 🅃🄾 🄷🄴🅁🄾🄺🅄",
+    "name": "𝕏𝕣𝕒𝕪-𝕍𝟚𝕣𝕒𝕪-𝕍𝕝𝕖𝕤𝕤-ℍ𝕖𝕣𝕠𝕜𝕦 XRay Vless V2Ray Heroku",
+    "description": "DEPLOY TO HEROKU",
     "logo":"https://telegra.ph/file/29a269dbbfa0dac35786d.jpg",
     "keywords": ["xray"],
     "env": {
         "UUID": {
-            "description": "Xray UUID,You can generate new UUID using this website (https://www.uuidgenerator.net/) ",
+            "description": "You can generate new UUID using this website (https://www.uuidgenerator.net/) ",
             "required": true        
         }
     },
-    "repository": "https://github.com/heshan2/heroku-xray-server",
+    "repository": "https://github.com/SkoopyLK/v2rayheroku",
     "stack": "container"
 }
