--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "𝕏𝕣𝕒𝕪-𝕍𝟚𝕣𝕒𝕪-𝕍𝕝𝕖𝕤𝕤-ℍ𝕖𝕣𝕠𝕜𝕦 XRay Vless V2Ray Heroku",
+    "name": "XRay Vless V2Ray Heroku",
     "description": "DEPLOY TO HEROKU",
     "logo":"https://telegra.ph/file/29a269dbbfa0dac35786d.jpg",
     "keywords": ["xray"],
